# virtual-mic

./: .gitignore  .mixmic.swo  .mixmic.swp  Makefile  Makefile.am  Makefile.in  README.md  bindApp.sh  config.status  configure  configure.ac  createMic.sh  mixmic  mixmic.desktop  mixmic.desktop.in  mixmic.js  workingSolution
autom4te.cache/: output.0  requests  traces.1
scripts/: .bindApp.sh.swp  .connectToMic.sh.swp  bindApp.sh  connectToMic.sh  createMic.sh  listApps.sh
src/: bindApp.sh  mixmic
